# kweathercore

./: .clang-format  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF5KWeatherCoreConfig.cmake.in  KF5LibKWeatherConfig.cmake.in  KFKWeatherCoreConfig.cmake.in  KWeatherCoreConfig.cmake.in  Mainpage.dox  README.md  metainfo.yaml
.reuse/: dep5
autotests/: CMakeLists.txt  capparsertest.cpp  dailyforecasttest.cpp  dailyforecasttest.h  dailyweatherforecasttest.cpp  dailyweatherforecasttest.h  geotimezonetest.cpp  geotimezonetest.h  hourlyforecasttest.cpp  hourlyforecasttest.h  hourlyweatherforecasttest.cpp  hourlyweatherforecasttest.h  locationquerytest.cpp  locationquerytest.h  metnoparsertest.cpp  pendingweatherforecasttest.cpp  pendingweatherforecasttest.h  sunrisesourcetest.cpp  sunrisesourcetest.h  sunrisetest.cpp  sunrisetest.h  weatherforecasttest.cpp  weatherforecasttest.h
autotests/capdata/: 431022.cap  454888.cap  dwd-update.xml  il-488abaaf-cad5-4d2b-93b2-703016878453.xml  it-2.49.0.0.380.3.IT.250416124517.161.xml  mo-cap_monsoon.xml  multi-area.xml  polygon-trailing-space.xml  rs-2.49.0.0.688.0.20250817210003.457535.xml  thunderstorm.xml  tsunami.xml
autotests/met.no/: berlin.json  berlin.json.ref
examples/: CMakeLists.txt
examples/snippets/: example.cpp  locationquery.cpp
po/ar/: kweathercore5.po  kweathercore6.po
po/ast/: kweathercore6.po
po/az/: kweathercore5.po  kweathercore6.po
po/bg/: kweathercore5.po  kweathercore6.po
po/ca/: kweathercore5.po  kweathercore6.po
po/ca@valencia/: kweathercore5.po  kweathercore6.po
po/cs/: kweathercore5.po  kweathercore6.po
po/de/: kweathercore5.po  kweathercore6.po
po/el/: kweathercore5.po  kweathercore6.po
po/en_GB/: kweathercore5.po  kweathercore6.po
po/eo/: kweathercore5.po  kweathercore6.po
po/es/: kweathercore5.po  kweathercore6.po
po/eu/: kweathercore5.po  kweathercore6.po
po/fi/: kweathercore5.po  kweathercore6.po
po/fr/: kweathercore5.po  kweathercore6.po
po/ga/: kweathercore6.po
po/gl/: kweathercore5.po  kweathercore6.po
po/he/: kweathercore6.po
po/hi/: kweathercore5.po  kweathercore6.po
po/hu/: kweathercore6.po
po/ia/: kweathercore6.po
po/is/: kweathercore5.po  kweathercore6.po
po/it/: kweathercore5.po  kweathercore6.po
po/ja/: kweathercore5.po  kweathercore6.po
po/ka/: kweathercore5.po  kweathercore6.po
po/ko/: kweathercore5.po  kweathercore6.po
po/lt/: kweathercore5.po  kweathercore6.po
po/lv/: kweathercore6.po
po/nb/: kweathercore6.po
po/nl/: kweathercore5.po  kweathercore6.po
po/nn/: kweathercore5.po  kweathercore6.po
po/pa/: kweathercore5.po  kweathercore6.po
po/pl/: kweathercore5.po  kweathercore6.po
po/pt/: kweathercore5.po  kweathercore6.po
po/pt_BR/: kweathercore5.po  kweathercore6.po
po/ru/: kweathercore5.po  kweathercore6.po
po/sa/: kweathercore6.po
po/sk/: kweathercore5.po  kweathercore6.po
po/sl/: kweathercore5.po  kweathercore6.po
po/sv/: kweathercore5.po  kweathercore6.po
po/tr/: kweathercore5.po  kweathercore6.po
po/ug/: kweathercore6.po
po/uk/: kweathercore5.po  kweathercore6.po
po/zh_CN/: kweathercore5.po  kweathercore6.po
po/zh_TW/: kweathercore5.po  kweathercore6.po
src/: CMakeLists.txt  Messages.sh  abstractcapprovider.cpp  abstractcapprovider.h  alertentry.cpp  alertentry.h  alertfeedentry.cpp  alertfeedentry.h  alertinfo.cpp  alertinfo.h  alertmanager.cpp  alertmanager.h  capalertinfo.cpp  capalertinfo.h  capalertmessage.cpp  capalertmessage.h  caparea.cpp  caparea.h  capnamedvalue.cpp  capnamedvalue.h  capparser.cpp  capparser.h  capreference.cpp  capreference.h  capresource.cpp  capresource.h  dailyforecast.cpp  dailyforecast.h  dailyweatherforecast.cpp  dailyweatherforecast.h  feedparser.cpp  feedparser.h  geotimezone.cpp  geotimezone.h  hourlyforecast.cpp  hourlyforecast.h  hourlyweatherforecast.cpp  hourlyweatherforecast.h  kweathercore.cpp  kweathercore.qdoc  (+29 more)
src/config/: dummy.json
src/qml/: CMakeLists.txt  types.h
tests/: CMakeLists.txt
